--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -3457,20 +3457,20 @@ fieldset:disabled .btn {
 }
 
 .btn-danger {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #e7366b;
-  --bs-btn-border-color: #e7366b;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #d03160;
-  --bs-btn-hover-border-color: #d03160;
-  --bs-btn-focus-shadow-rgb: 235, 84, 129;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #d03160;
-  --bs-btn-active-border-color: #d03160;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #e7366b;
-  --bs-btn-disabled-border-color: #e7366b;
+--bs-btn-color: #fff;
+--bs-btn-bg: #dc2626;
+--bs-btn-border-color: #dc2626;
+--bs-btn-hover-color: #fff;
+--bs-btn-hover-bg: #b91c1c;
+--bs-btn-hover-border-color: #b91c1c;
+--bs-btn-focus-shadow-rgb: 220, 38, 38;
+--bs-btn-active-color: #fff;
+--bs-btn-active-bg: #b91c1c;
+--bs-btn-active-border-color: #b91c1c;
+--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+--bs-btn-disabled-color: #fff;
+--bs-btn-disabled-bg: #dc2626;
+--bs-btn-disabled-border-color: #dc2626;
 }
 
 .btn-light {
